fix visibility bug

--- a/scss/components/_visibility.scss
+++ b/scss/components/_visibility.scss
@@ -29,7 +29,6 @@ table.body table.container .hide-for-large * {
   mso-hide: all; // hide selected elements in Outlook 2007-2013
 }
 
-table.body table.container .hide-for-large,
 table.body table.container .row.hide-for-large {
   @media only screen and (max-width: #{$global-breakpoint}) {
     display: table !important;
